# blog

./: db.sqlite3  pyproject.toml
blog/: models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_body.py
blog/static/blog/css/: base.css
blog/templates/blog/: base.html  home.html  post_delete.html  post_detail.html  post_edit.html  post_new.html
blog/templates/registration/: login.html  signup.html
django_project/: settings.py  urls.py
staticfiles/: staticfiles.json
