[tool.black]
line-length = 99
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
/migrations/  # exclude django migrations
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
exclude = [
    "migrations",
    "node_modules",
    ".venv",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]


